Article spacing fix, dropdown.js var rename

--- a/frontend/scss/organisms/_o-article.scss
+++ b/frontend/scss/organisms/_o-article.scss
@@ -399,7 +399,6 @@
   }
 
   .o-article__secondary-actions {
-    margin-top: 0;
     padding-top: 0;
     border-top: 0 none;
   }
